--- a/Teamply/Teamply/Screen/Main/Main.storyboard
+++ b/Teamply/Teamply/Screen/Main/Main.storyboard
@@ -18,7 +18,7 @@
                         <color key="barTintColor" name="basic1"/>
                     </tabBar>
                     <connections>
-                        <segue destination="Xuj-TM-pgb" kind="relationship" relationship="viewControllers" id="EcS-3y-9LL"/>
+                        <segue destination="Xuj-TM-pgb" kind="relationship" relationship="viewControllers" id="VqX-ay-CBv"/>
                         <segue destination="y2w-jh-U6l" kind="relationship" relationship="viewControllers" id="Ggk-K4-9qh"/>
                         <segue destination="fna-tC-WU1" kind="relationship" relationship="viewControllers" id="MDL-Q0-iqW"/>
                         <segue destination="CqB-M8-oYV" kind="relationship" relationship="viewControllers" id="mI2-ow-r7G"/>
@@ -36,7 +36,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a79-xq-yA8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="898" y="-155"/>
+            <point key="canvasLocation" x="898" y="-146"/>
         </scene>
         <!--Box-->
         <scene sceneID="Kty-Oa-Ffu">
